[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-velocity-analytics"
version = "1.0.0"
description = "Comprehensive GitHub PR collaboration analytics and development velocity metrics tool"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = [
    "github",
    "pull-request",
    "analytics",
    "velocity",
    "metrics",
    "development",
    "devops",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "PyGithub==2.1.1",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "python-dateutil"
]

[project.scripts]
pr-analytics = "pr_velocity_analytics:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "coverage",
    "black",
    "flake8",
    "mypy",
    "isort",
    "sphinx",
    "sphinx-rtd-theme",
    "pre-commit",
    "tox",
]

[tool.hatch.envs.default.scripts]
test = "pytest -v"
cov = "pytest --cov pr_velocity_analytics --cov-report term-missing"
lint = "flake8 pr_velocity_analytics.py test_pr_velocity_analytics.py"
format = "black pr_velocity_analytics.py test_pr_velocity_analytics.py && isort pr_velocity_analytics.py test_pr_velocity_analytics.py"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120